Add as bin script

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "bin": {
+    "node-git-watch": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist",
