--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
   },
   "scripts": {
     "build": "tsc",
+    "lint": "eslint . --ext .ts",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write",
     "start": "node dist",
     "watch": "tsc --watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run prettier-format && npm run lint"
+    }
   },
   "dependencies": {
     "chalk": "^4.1.0",
@@ -20,6 +27,11 @@
   "devDependencies": {
     "@types/node": "^14.14.32",
     "@types/yargs": "^16.0.0",
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.3",
+    "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   }
 }
