--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2017",
     "module": "commonjs",
+    "lib": ["es2017"],
     "strict": true,
     "outDir": "dist",
     "sourceMap": true,
